Update readme with recent CLI changes